--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Steven Malis"]
 
 [dependencies]
+dotenv = "0.11.0"
 lazy_static = "1.0"
 itertools = "0.7"
 rand = "0.4"
